Change package name for all internal code