@@ -1,24 +1,24 @@
-package com.oheers.evenmorefish.addons.item;
+package org.evenmorefish.fish.addons.item;
 
 
-import com.nexomc.nexo.api.NexoItems;
-import com.nexomc.nexo.api.events.NexoItemsLoadedEvent;
-import com.nexomc.nexo.items.ItemBuilder;
 import com.oheers.fish.api.addons.ItemAddon;
 import com.oheers.fish.api.plugin.EMFPlugin;
+import io.th0rgal.oraxen.api.OraxenItems;
+import io.th0rgal.oraxen.api.events.OraxenItemsLoadedEvent;
+import io.th0rgal.oraxen.items.ItemBuilder;
 import org.bukkit.event.EventHandler;
 import org.bukkit.inventory.ItemStack;
 
-public class NexoItemAddon extends ItemAddon {
-    
+public class OraxenItemAddon extends ItemAddon {
+
     @Override
     public String getIdentifier() {
-        return "nexo";
+        return "oraxen";
     }
 
     @Override
     public String getPluginName() {
-        return "Nexo";
+        return "Oraxen";
     }
 
     @Override
@@ -33,15 +33,15 @@ public class NexoItemAddon extends ItemAddon {
 
     @Override
     public ItemStack getItemStack(String id) {
-        if (!NexoItems.exists(id)) {
-            getLogger().warning(() -> "Nexo item with id %s doesn't exist.".formatted(id));
+        if (!OraxenItems.exists(id)) {
+            getLogger().warning(() -> "Oraxen item with id %s doesn't exist.".formatted(id));
             return null;
         }
 
-        final ItemBuilder item = NexoItems.itemFromId(id);
+        final ItemBuilder item = OraxenItems.getItemById(id);
 
         if (item == null) {
-            getLogger().info(() -> String.format("Could not obtain Nexo item %s", id));
+            getLogger().info(() -> "Could not obtain Oraxen item %s".formatted(id));
             return null;
         }
 
@@ -49,11 +49,10 @@ public class NexoItemAddon extends ItemAddon {
     }
 
     @EventHandler
-    public void onItemsLoad(NexoItemsLoadedEvent event) {
-        getLogger().info("Detected that Nexo has finished loading all items...");
+    public void onItemsLoad(OraxenItemsLoadedEvent event) {
+        getLogger().info("Detected that Oraxen has finished loading all items...");
         getLogger().info("Reloading EMF.");
 
         EMFPlugin.getInstance().reload(null);
     }
-
 }
